// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`u-validator.vue > Demo- 1`] = `
<div class="root" vusion-slot-name="default">
  <span class="message" color="error" style="display: none;">false</span>
</div>
`;

exports[`u-validator.vue > Demo-blur 后从绑定变量更新 1`] = `
<div class="root" direction="horizontal" type vusion-slot-name="default">
  <div class="root" placement="bottom" vusion-slot-name="default">
    <div class="root" color>
      <span class="baseline">b</span>
      <span class="placeholder" style="display: none;"></span>
      <input class="input" type="text">
    </div>
    <span class="message" color="error" style="display: none;">false</span>
  </div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    change
  </a>
</div>
`;

exports[`u-validator.vue > Demo-动态验证 1`] = `
<div class="root" gap="none" gap-height="normal" gap-width="normal" layout="block">
  <div class="root" distance label-size="normal" layout="center">
    <label class="label" position="right" vusion-slot-name="label" vusion-slot-name-edit="label">
      <span class="text" vusion-slot-name-edit="label"></span>
    </label>
    <div class="field">
      <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
      <div class="wrap" vusion-slot-name="default">
        <div class="root">
          <label class="root" selected="selected" tabindex="0">
            <span class="radio" selected="selected"></span>HTTP<span vusion-slot-name="item"></span>
          </label>
          <label class="root" tabindex="0">
            <span class="radio"></span>HTTPS<span vusion-slot-name="item"></span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div class="root" distance label-size="normal" layout="center">
    <label class="label" position="right" required="required" vusion-slot-name="label" vusion-slot-name-edit="label">
      <span class="text" vusion-slot-name-edit="label">端口</span>
    </label>
    <div class="field">
      <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
      <div class="wrap" vusion-slot-name="default">
        <div class="root" color maxlength="5" size="huge medium">
          <span class="baseline">b</span>
          <span class="placeholder">80-65535内的整数</span>
          <input class="input" maxlength="5" size="huge medium" type="text">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-动态验证 2`] = `
<div class="root" gap="none" gap-height="normal" gap-width="normal" layout="block">
  <div class="root" distance label-size="normal" layout="center">
    <label class="label" position="right" vusion-slot-name="label" vusion-slot-name-edit="label">
      <span class="text" vusion-slot-name-edit="label"></span>
    </label>
    <div class="field">
      <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
      <div class="wrap" vusion-slot-name="default">
        <div class="root">
          <label class="root" selected="selected" tabindex="0">
            <span class="radio" selected="selected"></span>HTTP<span vusion-slot-name="item"></span>
          </label>
          <label class="root" tabindex="0">
            <span class="radio"></span>HTTPS<span vusion-slot-name="item"></span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div class="root" distance label-size="normal" layout="center">
    <label class="label" position="right" required="required" vusion-slot-name="label" vusion-slot-name-edit="label">
      <span class="text" vusion-slot-name-edit="label">端口</span>
    </label>
    <div class="field">
      <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
      <div class="wrap" vusion-slot-name="default">
        <div class="root" color maxlength="5" size="huge medium">
          <span class="baseline">b</span>
          <span class="placeholder">80或1025-65535内的整数</span>
          <input class="input" maxlength="5" size="huge medium" type="text">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-单行嵌套 1`] = `
<div>
  <div class="root" vusion-slot-name="default">
    <div class="root" direction="horizontal" gap="small" type vusion-slot-name="default">
      <div class="root" vusion-slot-name="default">
        <div class="root" color size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder">容器端口，1-65535内的整数</span>
          <input class="input" size="huge normal" type="text">
        </div>
        <span class="message" color="error" style="display: none;">false</span>
      </div>
      <div class="root" vusion-slot-name="default">
        <div class="root" color size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder">服务端口，1-65535内的整数</span>
          <input class="input" size="huge normal" type="text">
        </div>
        <span class="message" color="error" style="display: none;">false</span>
      </div>
    </div>
    <span class="message" color="error" style="display: none;"></span>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-单行嵌套 2`] = `
<div>
  <div class="root" direction="horizontal" gap="small" type vusion-slot-name="default">
    <div class="root" placement="bottom" vusion-slot-name="default">
      <div class="root" color size="huge normal">
        <span class="baseline">b</span>
        <span class="placeholder">容器端口，1-65535内的整数</span>
        <input class="input" size="huge normal" type="text">
      </div>
      <span class="message" color="error" style="display: none;">false</span>
    </div>
    <div class="root" placement="bottom" vusion-slot-name="default">
      <div class="root" color size="huge normal">
        <span class="baseline">b</span>
        <span class="placeholder">服务端口，1-65535内的整数</span>
        <input class="input" size="huge normal" type="text">
      </div>
      <span class="message" color="error" style="display: none;">false</span>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-复合验证规则 1`] = `
<div class="root" gap="none" gap-height="large" gap-width="large" layout="block">
  <div class="root" distance label-size="normal" layout="center">
    <label class="label" position="right" required="required" vusion-slot-name="label" vusion-slot-name-edit="label">
      <span class="text" vusion-slot-name-edit="label">名称1</span>
    </label>
    <div class="field">
      <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
      <div class="wrap" vusion-slot-name="default">
        <div class="root" color maxlength="12" size="huge medium">
          <span class="baseline">b</span>
          <span class="placeholder">4-12个字符</span>
          <input class="input" maxlength="12" size="huge medium" type="text">
        </div>
      </div>
    </div>
  </div>
  <div class="root" distance label-size="normal" layout="center">
    <label class="label" position="right" required="required" vusion-slot-name="label" vusion-slot-name-edit="label">
      <span class="text" vusion-slot-name-edit="label">名称2</span>
    </label>
    <div class="field">
      <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
      <div class="wrap" vusion-slot-name="default">
        <div class="root" color maxlength="24" size="huge medium">
          <span class="baseline">b</span>
          <span class="placeholder">8-24个字符</span>
          <input class="input" maxlength="24" size="huge medium" type="text">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-失去焦点，还原正确的值 1`] = `
<div>
  <div class="root" distance label-size="auto" layout="center">
    <label class="label" position="right" vusion-slot-name="label" vusion-slot-name-edit="label">
      <span class="text" vusion-slot-name-edit="label">用户名</span>
    </label>
    <div class="field">
      <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
      <div class="wrap" vusion-slot-name="default">
        <div class="root" color maxlength="12">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" maxlength="12" type="text">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-字符串简写说明： 1`] = `
<div>
  <div class="root" distance label-size="auto" layout="center">
    <label class="label" position="right" required="required" vusion-slot-name="label" vusion-slot-name-edit="label">
      <span class="text" vusion-slot-name-edit="label">用户名</span>
    </label>
    <div class="field">
      <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
      <div class="wrap" vusion-slot-name="default">
        <div class="root" color maxlength="12">
          <span class="baseline">b</span>
          <span class="placeholder">4-12个字符</span>
          <input class="input" maxlength="12" type="text">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-完整格式 1`] = `
<div>
  <div class="root" distance label-size="auto" layout="center">
    <label class="label" position="right" required="required" vusion-slot-name="label" vusion-slot-name-edit="label">
      <span class="text" vusion-slot-name-edit="label">用户名</span>
    </label>
    <div class="field">
      <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
      <div class="wrap" vusion-slot-name="default">
        <div class="root" color maxlength="12">
          <span class="baseline">b</span>
          <span class="placeholder">4-12个字符</span>
          <input class="input" maxlength="12" type="text">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-密码确认场景 1`] = `
<div class="root" gap="none" gap-height="large" gap-width="large" layout="block">
  <div class="root" distance label-size="normal" layout="center">
    <label class="label" position="right" required="required" vusion-slot-name="label" vusion-slot-name-edit="label">
      <span class="text" vusion-slot-name-edit="label">密码</span>
    </label>
    <div class="field">
      <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
      <div class="wrap" vusion-slot-name="default">
        <div class="root" color maxlength="8" size="huge medium">
          <span class="baseline">b</span>
          <span class="placeholder">以字母、数字或'_'组成</span>
          <input class="input" maxlength="8" size="huge medium" type="password">
        </div>
      </div>
    </div>
  </div>
  <div class="root" distance label-size="normal" layout="center">
    <label class="label" position="right" required="required" vusion-slot-name="label" vusion-slot-name-edit="label">
      <span class="text" vusion-slot-name-edit="label">确认密码</span>
    </label>
    <div class="field">
      <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
      <div class="wrap" vusion-slot-name="default">
        <div class="root" color maxlength="8" size="huge medium">
          <span class="baseline">b</span>
          <span class="placeholder">再次输入密码</span>
          <input class="input" maxlength="8" size="huge medium" type="password">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-注册验证规则 1`] = `
<div class="root" distance label-size="auto" layout="center">
  <label class="label" position="right" vusion-slot-name="label" vusion-slot-name-edit="label">
    <span class="text" vusion-slot-name-edit="label">颜色</span>
  </label>
  <div class="field">
    <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
    <div class="wrap" vusion-slot-name="default">
      <div class="root" color>
        <span class="baseline">b</span>
        <span class="placeholder">请输入十六进制颜色值</span>
        <input class="input" type="text">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-注册验证规则 2`] = `
<div class="root" distance label-size="auto" layout="center">
  <label class="label" position="right" vusion-slot-name="label" vusion-slot-name-edit="label">
    <span class="text" vusion-slot-name-edit="label">颜色</span>
  </label>
  <div class="field">
    <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
    <div class="wrap" vusion-slot-name="default">
      <div class="root" color>
        <span class="baseline">b</span>
        <span class="placeholder">请输入十六进制颜色值</span>
        <input class="input" type="text">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-混合编写 1`] = `
<div class="root" distance label-size="auto" layout="center">
  <label class="label" position="right" required="required" vusion-slot-name="label" vusion-slot-name-edit="label">
    <span class="text" vusion-slot-name-edit="label">用户名</span>
  </label>
  <div class="field">
    <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
    <div class="wrap" vusion-slot-name="default">
      <div class="root" color maxlength="12">
        <span class="baseline">b</span>
        <span class="placeholder">4-12个字符</span>
        <input class="input" maxlength="12" type="text">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-混合编写 2`] = `
<div class="root" distance label-size="auto" layout="center">
  <label class="label" position="right" required="required" vusion-slot-name="label" vusion-slot-name-edit="label">
    <span class="text" vusion-slot-name-edit="label">用户名</span>
  </label>
  <div class="field">
    <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
    <div class="wrap" vusion-slot-name="default">
      <div class="root" color maxlength="12">
        <span class="baseline">b</span>
        <span class="placeholder">4-12个字符</span>
        <input class="input" maxlength="12" type="text">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-简写格式 1`] = `
<div>
  <div class="root" distance label-size="auto" layout="center">
    <label class="label" position="right" vusion-slot-name="label" vusion-slot-name-edit="label">
      <span class="text" vusion-slot-name-edit="label">用户名</span>
    </label>
    <div class="field">
      <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
      <div class="wrap" vusion-slot-name="default">
        <div class="root" color maxlength="12">
          <span class="baseline">b</span>
          <span class="placeholder">4-12个字符</span>
          <input class="input" maxlength="12" type="text">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-过长提示 1`] = `
<div>
  <div class="root" gap="none" gap-height="normal" gap-width="normal" layout="block">
    <div class="root" distance label-size="normal" layout="center">
      <label class="label" position="right" vusion-slot-name="label" vusion-slot-name-edit="label">
        <span class="text" vusion-slot-name-edit="label">用户名</span>
      </label>
      <div class="field">
        <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
        <div class="wrap" vusion-slot-name="default">
          <div class="root" color maxlength="4">
            <span class="baseline">b</span>
            <span class="placeholder">不超过4个字符</span>
            <input class="input" maxlength="4" type="text">
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-validator.vue > Demo-验证唯一性 1`] = `
<div class="root" distance label-size="auto" layout="center">
  <label class="label" position="right" required="required" vusion-slot-name="label" vusion-slot-name-edit="label">
    <span class="text" vusion-slot-name-edit="label">端口</span>
  </label>
  <div class="field">
    <div class="description" vusion-slot-name="description" vusion-slot-name-edit="description"></div>
    <div class="wrap" vusion-slot-name="default">
      <div class="root" color maxlength="5">
        <span class="baseline">b</span>
        <span class="placeholder">80-65535内的整数</span>
        <input class="input" maxlength="5" type="text">
      </div>
    </div>
  </div>
</div>
`;
